# singularity-files

./: meson.build
src/: app.vala  file_ops_manager.vala
ui/: main.ui  picker.ui
